syntax = "proto3";
package events;
option csharp_namespace = "Domain.Protos.Events";

message ElementDeletedEvent {
	string page_id = 1;
	string element_id = 2;
}